--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:3001"
-    }
-  },
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
