--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,11 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "cuid": "^2.1.4",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
