--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
     "cuid": "^2.1.4",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
