Add /public to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore public, as it is built on deploy
+# Place files for /public in /client/public
+/public
