--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "cuid": "^2.1.4",
@@ -23,10 +24,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build && mv build/index.html build/200.html && surge build"
-  },
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:3001"
-    }
   }
 }
