--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "cuid": "^2.1.4",
+    "merge": "^1.2.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "react": "^16.5.0",
