--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@material-ui/core": "^3.0.3",
-    "cuid": "^2.1.4",
+    "@material-ui/core": "^3.9.2",
+    "cuid": "^2.1.6",
+    "lodash": ">=4.17.11",
     "merge": "^1.2.1",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-moment": "^0.7.9",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "webpack-dev-server": ">=3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
